--- a/psel-shinier-2021/src/styles/bottomBar.css
+++ b/psel-shinier-2021/src/styles/bottomBar.css
@@ -13,6 +13,12 @@
   background-color: #414D55;
 }
 
+.filterText {
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.43rem;
+}
+
 .dottedLine {
   display: flex;
   align-items: center;
@@ -21,7 +27,7 @@
 .dottedLine:after {
   content: "";
   flex: 1;
-  border-bottom: 2px dashed#000;
+  border-bottom: 2px dashed#31363b;
 }
 
 .dottedLine:after {
